# GitPulse

./: .gitignore  README.md
backend/: .env.example  pyproject.toml
backend/src/: main.py
backend/src/gitpulse/: __init__.py  config.py
backend/src/gitpulse/api/: commits.py
backend/src/gitpulse/github/: client.py
frontend/: package.json
