[tool.poetry]
package-mode = false

[project]
name = "gitpulse-backend"
version = "0.1.0"
description = "GitPulse API and commit analysis (Python)"
requires-python = ">=3.11"
dependencies = [
"fastapi (>=0.135.3,<0.136.0)", 
"pydantic-settings (>=2.13.1,<3.0.0)", 
"uvicorn (>=0.44.0,<0.45.0)"
]

[project.optional-dependencies]
dev = [
  "ruff>=0.6.0",
  "pytest>=8.0.0",
]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
